--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@ignite-ui/docs",
+  "name": "@joaogomesdev-ignite-ui/docs",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -21,10 +21,10 @@
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
-    "@ignite-ui/eslint-config": "*",
-    "@ignite-ui/react": "*",
-    "@ignite-ui/tokens": "*",
-    "@ignite-ui/ts-config": "*",
+    "@joaogomesdev-ignite-ui/eslint-config": "*",
+    "@joaogomesdev-ignite-ui/react": "*",
+    "@joaogomesdev-ignite-ui/tokens": "*",
+    "@joaogomesdev-ignite-ui/ts-config": "*",
     "@storybook/addon-actions": "^6.5.12",
     "@storybook/addon-essentials": "^6.5.12",
     "@storybook/addon-interactions": "^6.5.12",
