--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@ignite-ui/eslint-config",
+  "name": "@joaogomesdev-ignite-ui/eslint-config",
   "version": "1.0.0",
   "license": "MIT",
   "main": "index.js",
