--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@ignite-ui/react",
+  "name": "@joaogomesdev-ignite-ui/react",
   "version": "1.0.0",
   "description": "",
   "main": "./dist/index.js",
@@ -14,9 +14,9 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "@ignite-ui/eslint-config": "*",
-    "@ignite-ui/tokens": "*",
-    "@ignite-ui/ts-config": "*",
+    "@joaogomesdev-ignite-ui/eslint-config": "*",
+    "@joaogomesdev-ignite-ui/tokens": "*",
+    "@joaogomesdev-ignite-ui/ts-config": "*",
     "tsup": "^6.2.3",
     "typescript": "^4.8.4"
   },
